--- a/app/src/main/res/layout/display_product_update.xml
+++ b/app/src/main/res/layout/display_product_update.xml
@@ -56,6 +56,7 @@
         tools:text="Qauantity" />
 
     <ListView
+        android:id="@+id/Product_Date"
         android:layout_width="200dp"
         android:layout_height="320dp"
         android:layout_marginStart="1dp"
